<resources>
    <string name="app_name">PhotoEditor</string>
    <string name="camera">Camera</string>
    <string name="facebook_app_id">1285296258191279</string>

    <string name="toast_no_internet">No internet connection</string>
    <string name="loading">Loading</string>
    <string name="share_title">Share image using</string>
    <string name="save_amp_share"><![CDATA[Save & Share]]></string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="next">Next</string>
    <string name="share_on">Share on</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_photo">Choose photo</string>
    <string name="crop">Crop</string>
    <string name="saturation">Saturation</string>
    <string name="balance">Balance</string>
    <string name="contrast">Contrast</string>
    <string name="bright">Bright</string>
    <string name="adjust_option">Adjust</string>
    <string name="frame_option">Frame</string>
    <string name="filter_option">Filter</string>
    <string name="new_filter">New filter</string>
    <string name="from">From:</string>
    <string name="selected">Selected:</string>
    <string name="to">To:</string>

</resources>
