<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_save"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.project.yura.photoeditor.ui.activity.SaveActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_bar_height"
        android:background="@color/colorAccent">

        <TextView
            style="@style/AppTheme.HeadLine"
            android:text="@string/save_amp_share"
            android:textAllCaps="false" />

        <ImageView
            android:id="@+id/save_back_button"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="?selectableItemBackgroundBorderless"
            android:paddingEnd="18dp"
            android:paddingStart="18dp"
            android:src="@drawable/back_arrow_button" />

        <ImageView
            android:id="@+id/save_home_button"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingEnd="14dp"
            android:paddingStart="14dp"
            android:src="@drawable/home_button" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_bar_border"
        android:background="@color/colorText"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical"
        android:paddingTop="36dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ok_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saved_successfully"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/share_on"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/save_facebook_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="12dp"
                android:src="@drawable/share_facebook" />

            <ImageView
                android:id="@+id/save_vk_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="12dp"
                android:src="@drawable/share_vk" />

            <ImageView
                android:id="@+id/save_instagram_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="12dp"
                android:src="@drawable/share_instagram" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/save_twitter_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="12dp"
                android:src="@drawable/share_twitter" />

            <ImageView
                android:id="@+id/save_viber_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="12dp"
                android:src="@drawable/share_viber" />

            <ImageView
                android:id="@+id/save_other_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="12dp"
                android:src="@drawable/share_somewhere" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
