<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="com.project.yura.photoeditor.ui.activity.EditImageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imageToEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/back" />

        <ImageView
            android:id="@+id/cancel_button"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:background="@android:color/transparent"
            android:padding="@dimen/icon_button_margin"
            android:src="@drawable/cancel_button" />

        <ImageView
            android:id="@+id/ok_button"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:padding="@dimen/icon_button_margin"
            android:src="@drawable/ok_button" />

        <ImageView
            android:id="@+id/preview_button"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="6dp"
            android:background="@android:color/transparent"
            android:padding="@dimen/icon_button_margin"
            android:src="@drawable/preview_button_dark" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_to_hide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_bar_border"
            android:background="@color/colorText"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_bar_height"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/adjust_select"
                style="@style/AppTheme.ElementLayout">

                <ImageView
                    style="@style/AppTheme.ElementIcon"
                    android:src="@drawable/frame_icon" />

                <TextView
                    style="@style/AppTheme.ElementDescription"
                    android:text="@string/adjust_option" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/frame_select"
                style="@style/AppTheme.ElementLayout">

                <ImageView
                    style="@style/AppTheme.ElementIcon"
                    android:src="@drawable/adjust_icon" />

                <TextView
                    style="@style/AppTheme.ElementDescription"
                    android:text="@string/frame_option" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/filter_select"
                style="@style/AppTheme.ElementLayout">

                <ImageView
                    style="@style/AppTheme.ElementIcon"
                    android:src="@drawable/filter_icon" />

                <TextView
                    style="@style/AppTheme.ElementDescription"
                    android:text="@string/filter_option" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
